# modbus-prometheus-api-server

./: Cargo.toml  README.adoc  setup.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: cd.yml  ci-main.yml  ci.yml
config/: setup-prod.toml  test_client.json
doc/: state-machine.drawio  testing.drawio
docker/modbus-prometheus-api-server/macOS-M1/: Dockerfile
docker/node-red/: Dockerfile
docker/node-red/data/: .config.nodes.json  .config.runtime.json  flows.json  package-lock.json  package.json
docker/node_red_data/: .config.runtime.json  flows.json
docker/prometheus/: prometheus.yml
src/: lib.rs  main.rs
src/clients/: mod.rs  read_data.rs
src/configuration/: mod.rs
src/errors/: impls.rs  mod.rs
src/logging/: mod.rs
src/prometheus/: mod.rs
src/routes/: helpers.rs  mod.rs
src/utils/: mod.rs
