[package]
edition = "2021"
name = "modbus-prometheus-api-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
futures = {version = "0.3", default-features = false}
prometheus = {version = "0.9", features = ["process"]}
rand = "0.7"
regex = "1.8.1"
reqwest = {version = "0.11", features = ["json"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
tokio-modbus = {version = "*", default-features = false, features = ["tcp"]}
warp = "0.3"
log = "0.4"
env_logger = "0.9"
